Bug 167971 - Problems in vertical tab "Position and Size" dialog (wheel control)
Summary: Problems in vertical tab "Position and Size" dialog (wheel control)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-08-15 21:15 UTC by Regina Henschel
Modified: 2025-11-25 10:18 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison of rotation wheel control old and new (3.20 KB, image/png)
2025-08-15 21:15 UTC, Regina Henschel
Details
Screenshot (18.33 KB, image/png)
2025-08-15 23:35 UTC, m_a_riosv
Details
Screenshot of vertical tabs variant of "Position and Size" dialog (21.49 KB, image/png)
2025-08-16 00:01 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-08-15 21:15:46 UTC
Created attachment 202344 [details]
comparison of rotation wheel control old and new

1. On tab "Position and Size"
The rectangles for Base point have no marker that show what base point is active.

2. On tab "Rotation"
2a) The rectangle for "Default settings:" for the Pivot Point has no marker.
2b) The rotation control is wrongly rendered, see attachment. The inner part should be a circle.

3. The inconsistent size of the input fields and the position of the rectangles is not solved, see bug 134410.

May I point to my request in bug 145969? It might be a good time to consider my wishes now that the dialog is being revised anyway.
Comment 1 Regina Henschel 2025-08-15 22:39:39 UTC
I see the error of the missing marks too in the "Text anchor" rectangle in "Text attributes.." dialog.
Comment 2 m_a_riosv 2025-08-15 23:35:25 UTC
Created attachment 202346 [details]
Screenshot

This is how I see it 
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Regina Henschel 2025-08-15 23:58:16 UTC
Does your version has already the vertical tabs variant of this dialog?

I have tested it with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2ed746a0c7249850ec11ee132de4b9090a419e08
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 4 m_a_riosv 2025-08-16 00:01:28 UTC
Nope.
Comment 5 Regina Henschel 2025-08-16 00:01:31 UTC
Created attachment 202347 [details]
Screenshot of vertical tabs variant of "Position and Size" dialog
Comment 6 m_a_riosv 2025-08-16 00:09:19 UTC
My 26.2 was downloaded 2025-07-24:01:46, there are no new compilations, in fact non, actually for Win.

Perhaps that is why there are no vertical tabs for this dialog box.
Comment 7 nobu 2025-08-16 00:51:22 UTC
Reproducible with
[2025_08_15]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f23ac8bb32cf22a07c93645e604876a404769459
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

There are countless defects regarding the vertical tab, and I don't know if there is any meaning in reporting the defects.
Comment 8 Regina Henschel 2025-08-16 21:12:16 UTC
There is an explicit request from Heiko to check the dialogs, see topic "UX Update (Heiko)" part "Vertical tabs" in https://lists.freedesktop.org/archives/libreoffice-qa/2025-August/011929.html
Comment 9 Heiko Tietze 2025-08-19 07:19:31 UTC
(In reply to Regina Henschel from comment #0)
> Created attachment 202344 [details]
> comparison of rotation wheel control old and new
(In reply to m_a_riosv from comment #2)
> Created attachment 202346 [details]

I think these visual glitches under Windows are unrelated to the tab position. You may double-check per switching back to HT (Tools > Options > Appearance).

(In reply to nobu from comment #7)
> There are countless defects regarding the vertical tab, and I don't know if
> there is any meaning in reporting the defects.

Doubt the "countless" number but you are very welcome to report. The mentioned issues above might relate to other changes and affect probably only Windows. I suspect Michael's patch for bug 167658.
Comment 10 Michael Weghorn 2025-08-19 07:55:02 UTC
(In reply to Heiko Tietze from comment #9)
> Doubt the "countless" number but you are very welcome to report. The
> mentioned issues above might relate to other changes and affect probably
> only Windows. I suspect Michael's patch for bug 167658.

If "the mentioned issues above" refers to Regina's original bug report, it sounds unrelated to any changes done in the context of tdf#167658 to me at first (which were to optimize use of space by icon views).
Bibisecting could probably help to identify the exact commit from where on this is rendered that way.

If "the mentioned issues above" refers to something else, please create separate bug reports for them and give more details.
Comment 11 Michael Weghorn 2025-08-19 08:06:19 UTC
(In reply to Michael Weghorn from comment #10)
> If "the mentioned issues above" refers to Regina's original bug report, it
> sounds unrelated to any changes done in the context of tdf#167658 to me at
> first (which were to optimize use of space by icon views).
> Bibisecting could probably help to identify the exact commit from where on
> this is rendered that way.

I've done that for sub-aspect 2b as mentioned in the original description:

(Regina Regina Henschel ub comment #0)
> 2. On tab "Rotation"
> 2b) The rotation control is wrongly rendered, see attachment. The inner part
> should be a circle.

and that non-round rendering seems to start at

commit cdf04ce1474fdba48018752715202d86455b8238
Author: Bartosz Kosiorek
Date:   Wed Aug 6 21:23:28 2025 +0200

    tdf#103859 EMF Fix quality of EMR_ELLIPSE by using Bazier curve for drawing

Also reproducible with gen or qt6 on Linux with current master.

The other issues could be bibisected separately and if they're caused by something else, splitting into separate bug reports might make sense.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 92952f59f091b8f9a5092e27ae88bbd88de5e5f3
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 12 Regina Henschel 2025-08-19 16:49:11 UTC
Let's keep this for 2b, for which Michael Weghorn did a bibisection.

I have written a new bug 168014 for the problems 1 and 2a.
Comment 13 Commit Notification 2025-09-15 15:05:14 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b9cc944daeede51acd322b1cea47d6f44b20968a

Resolves tdf#167971 - Dialcontrol with clean background

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 mulleinaverage 2025-11-25 07:09:42 UTC Comment hidden (spam)