Resolves tdf#167971 - Dialcontrol with clean background

For some reason the DrawEllipsis() command paints rather a
rounded rectangle than a circle; DrawPie() wiorks much better

Change-Id: I60a2f9df30d47479a2367c0d0fbbd895859190c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190968
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>